# publication_effect

./: README.md  environment.yml  pyproject.toml  requirements.txt
notebooks/: publication_effect_illustrative.ipynb  publication_effect_notebook.ipynb
outputs/notebook_outputs/: appendix_e_inference.csv  last_observed_month_counts.csv  sample_summary.csv  strategy_effects_full.csv  strategy_sign_partition.csv  terminal_wealth_120m.csv
reports/: publication_effect_illustrative.html
